--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'inter', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +10,100 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+nav{
+  display: flex;
+  justify-content: center;
+  background-color: #F55A5A;
+  margin-bottom: 45px;
+  
+}
+nav h1{
+  color: #fff;
+  font-weight: 500;
+    font-size: 14.4608px;
+    line-height: 18px;
+    letter-spacing: -0.075em;
+}
+nav p{
+  display: block;
+}
+
+.card{
+  display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: space-between;
+  width: 500px;
+  margin: 10px auto;
+  color: #2B283A;
+}
+.card--thumbnail{
+  width: 125px;
+  height: 168px;
+  border-radius: 5px;
+  
+}
+.content{
+  padding-left: 30px;
+}
+.location{
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 10.25px;
+  line-height: 12px;
+    letter-spacing: 0.17em;
+  
+  
+}
+.location > a{
+  text-decoration-line: underline;
+  text-transform: capitalize;
+  color: #918E9B;
+  padding-left: 12px;
+}
+h2{
+  margin: 7px 0;
+  font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+}
+
+.date{
+  font-weight: 700;
+    font-size: 10.24px;
+    line-height: 12px;
+}
+p{
+  font-weight: 400;
+    font-size: 10.24px;
+    line-height: 150%;
+    /* or 15px */
+}
+
+.footer{
+  position: sticky;
+  background-color: #2B283A;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  font-size: 12px;
+}
+.footer > a{
+  text-decoration-line: underline;
+    text-transform: capitalize;
+    color: #F55A5A;
+    
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .card {
+      
+      width: 95%;
+      /* margin: 0 10px; */
+      
+    }
+  .content {
+          padding-left: 15px;
+        }
 }
